--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
