--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "papaparse": "^5.4.1",
