--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
+    "path": "^0.12.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "replicate": "^0.32.0"
   },
   "devDependencies": {
     "@gradio/client": "^1.5.1",
